--- a/CliClient/locales/joplin.pot
+++ b/CliClient/locales/joplin.pot
@@ -123,6 +123,9 @@ msgstr ""
 msgid "Displays a geolocation URL for the note."
 msgstr ""
 
+msgid "Displays usage information."
+msgstr ""
+
 msgid "Imports an Evernote notebook file (.enex file)."
 msgstr ""
 
@@ -241,6 +244,13 @@ msgid "Synchronisation is already in progress."
 msgstr ""
 
 #, javascript-format
+msgid ""
+"Lock file is already being hold. If you know that no synchronisation is "
+"taking place, you may delete the lock file at \"%s\" and resume the "
+"operation."
+msgstr ""
+
+#, javascript-format
 msgid "Synchronisation target: %s (%s)"
 msgstr ""
 
@@ -253,7 +263,7 @@ msgstr ""
 msgid "Done."
 msgstr ""
 
-msgid "Cancelling..."
+msgid "Cancelling... Please wait."
 msgstr ""
 
 msgid ""
@@ -283,6 +293,10 @@ msgstr ""
 
 #, javascript-format
 msgid "%s %s (%s)"
+msgstr ""
+
+#, javascript-format
+msgid "Received %s"
 msgstr ""
 
 msgid "Fatal error:"
@@ -338,6 +352,9 @@ msgstr ""
 
 #, javascript-format
 msgid "Last error: %s (stacktrace in log)."
+msgstr ""
+
+msgid "Cancelling..."
 msgstr ""
 
 #, javascript-format
