--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -309,7 +309,12 @@ msgstr ""
 msgid "The application has been successfully authorised."
 msgstr ""
 
-msgid "Please open this URL in your browser to authenticate the application:"
+msgid ""
+"Please open the following URL in your browser to authenticate the "
+"application. The application will create a directory in \"Apps/Joplin\" and "
+"will only read and write files in this directory. It will have no access to "
+"any files outside this directory nor to any other personal data. No data "
+"will be shared with any third party."
 msgstr ""
 
 msgid ""
