--- a/CliClient/locales/fr_FR.po
+++ b/CliClient/locales/fr_FR.po
@@ -529,6 +529,9 @@ msgstr "Tâches complétées seulement"
 msgid "Show uncompleted todos on top of the lists"
 msgstr "Tâches non-terminées en haut des listes"
 
+msgid "Show advanced options"
+msgstr ""
+
 msgid "Save location with notes"
 msgstr "Enregistrer l'emplacement avec les notes"
 
