--- a/CliClient/locales/joplin.pot
+++ b/CliClient/locales/joplin.pot
@@ -19,7 +19,7 @@ msgid "[Cancel]"
 msgstr ""
 
 #, javascript-format
-msgid "More than one item match \"%s\". Please select one:"
+msgid "More than one item match \"%s\". Please narrow down your query."
 msgstr ""
 
 msgid "No notebook selected."
