Fixed editing notes

--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -39,6 +39,9 @@ msgstr ""
 msgid "Maximise/minimise the console"
 msgstr ""
 
+msgid "Press Ctrl+D or type \"exit\" to exit the application"
+msgstr ""
+
 msgid "[Cancel]"
 msgstr ""
 
@@ -170,9 +173,6 @@ msgid "Note is not a todo: \"%s\""
 msgstr ""
 
 msgid "Edit note."
-msgstr ""
-
-msgid "Done editing."
 msgstr ""
 
 msgid ""
