Better handling of network errors and improved borders

--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -24,6 +24,9 @@ msgstr ""
 msgid "Toggle console between maximized/minimized/hidden/visible."
 msgstr ""
 
+msgid "Toggle note metadata."
+msgstr ""
+
 msgid "Enter command line mode"
 msgstr ""
 
