--- a/CliClient/locales/joplin.pot
+++ b/CliClient/locales/joplin.pot
@@ -24,6 +24,9 @@ msgstr ""
 msgid "Toggle console between maximized/minimized/hidden/visible."
 msgstr ""
 
+msgid "Toggle note metadata."
+msgstr ""
+
 msgid "Enter command line mode"
 msgstr ""
 
