--- a/CliClient/locales/joplin.pot
+++ b/CliClient/locales/joplin.pot
@@ -390,6 +390,10 @@ msgid ""
 "operation."
 msgstr ""
 
+msgid ""
+"Authentication was not completed (did not receive an authentication token)."
+msgstr ""
+
 #, javascript-format
 msgid "Synchronisation target: %s (%s)"
 msgstr ""
