Display link to resources and display them via server.

--- a/CliClient/locales/en_GB.po
+++ b/CliClient/locales/en_GB.po
@@ -90,6 +90,9 @@ msgstr ""
 msgid "Exits the application."
 msgstr ""
 
+msgid "Cancelling background synchronisation... Please wait."
+msgstr ""
+
 msgid "Only Bash is currently supported for autocompletion."
 msgstr ""
 
