Scroll to bottom of console after inputting command

--- a/CliClient/locales/fr_FR.po
+++ b/CliClient/locales/fr_FR.po
@@ -280,6 +280,11 @@ msgstr ""
 msgid "To move from one widget to another, press Tab or Shift+Tab."
 msgstr ""
 
+msgid ""
+"Use the arrows and page up/down to scroll the lists and text area (including "
+"the console)."
+msgstr ""
+
 #, fuzzy
 msgid "To maximise/minimise the console, press \"C\"."
 msgstr "Quitter le logiciel."
