--- a/CliClient/locales/joplin.pot
+++ b/CliClient/locales/joplin.pot
@@ -253,6 +253,11 @@ msgstr ""
 msgid "To move from one widget to another, press Tab or Shift+Tab."
 msgstr ""
 
+msgid ""
+"Use the arrows and page up/down to scroll the lists and text area (including "
+"the console)."
+msgstr ""
+
 msgid "To maximise/minimise the console, press \"C\"."
 msgstr ""
 
