--- a/CliClient/locales/fr_FR.po
+++ b/CliClient/locales/fr_FR.po
@@ -110,6 +110,10 @@ msgstr "Quitter le logiciel."
 msgid "Cancelling background synchronisation... Please wait."
 msgstr "Annulation..."
 
+#, javascript-format
+msgid "The command \"%s\" is only available in GUI mode"
+msgstr ""
+
 msgid "Only Bash is currently supported for autocompletion."
 msgstr ""
 
@@ -281,8 +285,8 @@ msgid "To move from one widget to another, press Tab or Shift+Tab."
 msgstr ""
 
 msgid ""
-"Use the arrows and page up/down to scroll the lists and text area (including "
-"the console)."
+"Use the arrows and page up/down to scroll the lists and text areas "
+"(including this console)."
 msgstr ""
 
 #, fuzzy
